--- a/templates/add_registration.html
+++ b/templates/add_registration.html
@@ -8,7 +8,7 @@
             <!-- event selection -->
 			<div class="row">
 				<div class="input-field col s12">
-                    <i class="fas fa-folder-open prefix #00acc1 cyan darken-1"></i>
+                    <i class="fas fa-plus-circle prefix"></i>
 					<select id="event_name" name="event_name" class="validate" required>
                         <option value="" disabled selected>Choose Event</option>
                         {% for event in events %}
@@ -21,7 +21,7 @@
             <!-- registration name -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="fas fa-pencil-alt prefix #00acc1 cyan darken-1"></i>
+                    <i class="fas fa-pencil-alt prefix"></i>
                     <input id="registration_name" name="registration_name" minlength="2" maxlength="20"
                         type="text" class="validate" required>
                     <label for="registration_name">Registration Name</label>
@@ -30,7 +30,7 @@
             <!-- registration email -->
             <div class = "row">  
                <div class = "input-field col s12">
-                  <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
+                  <i class="fas fa-at prefix"></i>
                   <input id="Email" name="email" type="email" class = "validate" minlength="5" maxlength="40" required>
                   <label for="email">Email</label>
                </div>  
