--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
 
         <!-- mobile sidenav -->
 		<ul class="sidenav" id="mobile-demo">
-            <li><h4 class="center-align light-blue darken-4">Registration Manager</h4></li>
+            <li><h4 class="center-align #00acc1 cyan darken-1">Registration Manager</h4></li>
             <li><a href="{{ url_for('get_registrations') }}">Home</a></li>
             {% if session.user %}
                 <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
@@ -60,7 +60,7 @@
             {% if messages %}
                 {% for message in messages %}
                     <div class="row flashes">
-                        <h4 class="light-blue darken-4 center-align">{{ message }}</h4>
+                        <h4 class="#00acc1 cyan darken-1 center-align">{{ message }}</h4>
                     </div>
                 {% endfor %}
             {% endif %}
