--- a/templates/add_event.html
+++ b/templates/add_event.html
@@ -3,7 +3,7 @@
 
     <h3 class="#00acc1 cyan darken-1 center-align">Add Event</h3>
 
-    <div class="row card-panel grey lighten-5">
+    <div class="row card-panel #efebe9 brown lighten-5">
         <form class="col s12" method="POST" action="{{ url_for('add_event') }}">
             <!-- event name -->
             <div class="row">
