--- a/templates/edit_event.html
+++ b/templates/edit_event.html
@@ -3,7 +3,7 @@
 
     <h3 class="light-blue-text text-darken-4 center-align">Edit Events</h3>
 
-    <div class="row card-panel grey lighten-5">
+    <div class="row card-panel #efebe9 brown lighten-5">
         <form class="col s12" method="POST" action="{{ url_for('edit_event', event_id=event._id) }}">
             <!-- event name -->
             <div class="row">
