--- a/templates/events.html
+++ b/templates/events.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="light-blue-text text-darken-4 center-align">Manage Events</h3>
+    <h3 class="cyan white-text center-align text-shadow">Manage Events</h3>
 
     <div class="row">
         <div class="col s12 center-align">
