--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,7 +3,7 @@
 
     <div class="row">
         <div class="col s12 m8 offset-m2">
-            <div class="card-panel">
+            <div class="card-panel #efebe9 brown lighten-5">
                 <h3 class="center-align #00acc1 cyan darken-1">
                     {{ username }}'s Profile
                 </h3>
