--- a/templates/add_event.html
+++ b/templates/add_event.html
@@ -9,7 +9,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
-                    <input id="event_name" name="event_name" minlength="3" maxlength="25"
+                    <input id="event_name" name="event_name" minlength="3" maxlength="30"
                         type="text" class="validate" required>
                     <label for="event_name">Event Name</label>
                 </div>
@@ -18,7 +18,7 @@
               <div class="row">
                 <div class="col s12 center-align">
                     <button type="submit" class="btn-large light-blue darken-1 text-shadow">
-                        Add Task <i class="fas fa-plus-square right"></i>
+                        Add Event <i class="fas fa-plus-square right"></i>
                     </button>
                 </div>
             </div>
