--- a/templates/events.html
+++ b/templates/events.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="cyan white-text center-align text-shadow">Manage Events</h3>
+    <h3 class="#00897b teal darken-1 white-text center-align text-shadow">Manage Events</h3>
 
     <div class="row">
         <div class="col s12 center-align">
@@ -14,7 +14,7 @@
     <div class="row">
         {% for event in events %}
             <div class="col s12 m3">
-                <div class="card light-blue darken-4 text-shadow center-align">
+                <div class="card #00897b teal darken-1 text-shadow center-align">
                     <div class="card-content white-text">
                         <span class="card-title">{{ event.event_name }}</span>
                     </div>
