--- a/templates/registrations.html
+++ b/templates/registrations.html
@@ -6,7 +6,7 @@
     <ul class="collapsible">
         {% for registration in registrations %}
         <li>
-            <div class="collapsible-header white-text #00acc1 cyan darken-1 text-shadow">
+            <div class="collapsible-header white-text #00897b teal darken-1 text-shadow">
                 <div class="col s12">
                     <i class="fas fa-caret-down"></i>
                     <strong>{{ registration.event_name }}</strong>
