--- a/templates/base.html
+++ b/templates/base.html
@@ -38,11 +38,11 @@
 
         <!-- mobile sidenav -->
 		<ul class="sidenav" id="mobile-demo">
-            <li><h4 class="center-align #00acc1 cyan darken-1">Registration Manager</h4></li>
+            <li><h6 class="center-align #00acc1 cyan darken-1">Windsurf Event Planner</h6></li>
             <li><a href="{{ url_for('get_registrations') }}">Home</a></li>
             {% if session.user %}
                 <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-                <li><a href="{{ url_for('add_registration') }}">New registration</a></li>
+                <li><a href="{{ url_for('add_registration') }}">Plan Event</a></li>
                 {% if session.user|lower == "admin"|lower %}
                     <li><a href="{{ url_for('get_events') }}">Manage Events</a></li>
                 {% endif %}
