--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
         <!-- top navbar -->
 		<nav class="nav-extended text-shadow #00acc1 cyan darken-1">
 			<div class="nav-wrapper">
-				<a href="{{ url_for('get_registrations') }}" style="padding-left:10px" class="brand-logo">Windsurf Event Planner <i class="fas fa-water"></i></a>
+				<a href="{{ url_for('get_registrations') }}" style="padding-left:10px" class="brand-logo">Windsurf Event Planner</a>
 				<a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
 				<ul class="right hide-on-med-and-down">
 					<li><a href="{{ url_for('get_registrations') }}">Home</a></li>
@@ -38,7 +38,7 @@
 
         <!-- mobile sidenav -->
 		<ul class="sidenav" id="mobile-demo">
-            <li><h6 class="center-align #00acc1 cyan darken-1">Windsurf Event Planner</h6></li>
+            <li><h6 class="center-align #00acc1 cyan darken-1">Event</h6></li>
             <li><a href="{{ url_for('get_registrations') }}">Home</a></li>
             {% if session.user %}
                 <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
