--- a/templates/edit_event.html
+++ b/templates/edit_event.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="light-blue-text text-darken-4 center-align">Edit Events</h3>
+    <h3 class="#00897b teal darken-1 white-text center-align text-shadow">Edit Event</h3>
 
     <div class="row card-panel #efebe9 brown lighten-5">
         <form class="col s12" method="POST" action="{{ url_for('edit_event', event_id=event._id) }}">
