--- a/templates/add_event.html
+++ b/templates/add_event.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="#00acc1 cyan darken-1 center-align">Add Event</h3>
+    <h3 class="#00897b teal darken-1 white-text center-align text-shadow">Add Event</h3>
 
     <div class="row card-panel #efebe9 brown lighten-5">
         <form class="col s12" method="POST" action="{{ url_for('add_event') }}">
